<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStarted.GetStarted">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pesona_bumi_indonesia"
            android:textSize="@dimen/_33sdp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kemas_bajumu_dan_ikutlah_berlibur_bersamaku"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/white"
            android:textStyle="normal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_14sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="31dp"
            android:background="@drawable/btn_login_effect"
            android:text="@string/login"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginRight="31dp"
            android:background="@drawable/btn_register_dua_effect"
            android:text="@string/register"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>