<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Checkout.SuccsesTiketCheckout">


    <LinearLayout
        android:id="@+id/linearLayout20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_11sdp"
        android:layout_marginLeft="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logotransaksisukses"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_261sdp"
            android:background="@drawable/order"
            android:contentDescription="@string/ilus" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/wow_wow_woow_transaksi_kamu_dah_sukses_nih"
        android:textColor="@color/black"
        android:textSize="@dimen/_19ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout20" />


    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_65sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">


        <Button
            android:id="@+id/Dashboard_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/btn_login_effect"
            android:text="@string/kembali_ke_dasboard"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>