<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_3"
    tools:context=".RegisterAkun.RegistrasiSatu">

    <LinearLayout
        android:id="@+id/linearLayout21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginStart="@dimen/_9sdp"
            android:contentDescription="@string/ilus"
            android:src="@drawable/register"
            tools:ignore="ImageContrastCheck" />


        <TextView
            android:layout_marginStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_50sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:text="@string/registrasi"
            android:textColor="@color/black"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_21sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout21">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_11sdp"
                    android:textColorHint="@color/black"
                    app:counterEnabled="true"
                    app:counterMaxLength="9"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/et_Username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLength="9"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="normal"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_11sdp"
                    android:textColorHint="@color/black"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/et_Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="normal"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_11sdp"
                    android:textColorHint="@color/black"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="normal"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/lanjut"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/btn_login_effect"
                    android:text="@string/lanjut"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>