<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Login">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="@dimen/_180sdp"
            android:src="@drawable/login"
            android:layout_height="@dimen/_180sdp"
            android:contentDescription="@string/ilus" />


        <TextView
            android:layout_marginTop="@dimen/_90sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_40ssp"
            android:textColor="@color/white"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginLeft="@dimen/_21sdp"
        android:layout_marginRight="@dimen/_21sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_11sdp"
                android:textColorHint="@color/black"
                app:counterEnabled="true"
                app:counterMaxLength="9">

                <EditText
                    android:id="@+id/inputUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="9"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_11sdp"
                android:textColorHint="@color/black"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <Button
            android:id="@+id/btn_regis"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:background="@drawable/btn_register_effect"
            android:padding="@dimen/_12sdp"
            android:text="@string/belum_punya_akun"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_login"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:background="@drawable/btn_login_effect"
            android:text="@string/login"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>