<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterAkun.RegistrasiDua">

    <LinearLayout
        android:background="@drawable/bg_reg2"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <io.github.florent37.shapeofview.shapes.CircleView
            android:layout_marginTop="@dimen/_21sdp"
            android:id="@+id/circleView"
            android:layout_width="@dimen/_87sdp"
            android:layout_marginStart="@dimen/_94sdp"
            android:layout_height="@dimen/_87sdp">

            <ImageView
                android:id="@+id/photo_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/ilus"
                android:src="@drawable/user"
                tools:ignore="ImageContrastCheck" />

        </io.github.florent37.shapeofview.shapes.CircleView>

        <Button
            android:id="@+id/pilih_gambar"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_29sdp"
            android:layout_marginStart="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_46sdp"
            android:background="@drawable/add_photo_effect"
            android:textSize="@dimen/_11ssp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_21sdp"
        android:layout_marginRight="@dimen/_21sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_17sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/nama_lengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="17"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="normal"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/no_telp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_telpon"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="normal"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/domisili_pengguna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/domisili"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="normal"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/status"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="16"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="normal"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="right"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_47sdp"
                    android:background="@drawable/btn_login_effect"
                    android:text="@string/daftarkan"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>